--- a/src/assets/css/output.css
+++ b/src/assets/css/output.css
@@ -554,8 +554,62 @@ video {
   --tw-contain-style:  ;
 }
 
+.container {
+  width: 100%;
+}
+
+@media (min-width: 640px) {
+  .container {
+    max-width: 640px;
+  }
+}
+
+@media (min-width: 768px) {
+  .container {
+    max-width: 768px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .container {
+    max-width: 1024px;
+  }
+}
+
+@media (min-width: 1280px) {
+  .container {
+    max-width: 1280px;
+  }
+}
+
+@media (min-width: 1536px) {
+  .container {
+    max-width: 1536px;
+  }
+}
+
+.collapse {
+  visibility: collapse;
+}
+
+.fixed {
+  position: fixed;
+}
+
+.relative {
+  position: relative;
+}
+
 .sticky {
   position: sticky;
+}
+
+.bottom-5 {
+  bottom: 1.25rem;
+}
+
+.right-5 {
+  right: 1.25rem;
 }
 
 .top-0 {
@@ -577,6 +631,14 @@ video {
 
 .mb-4 {
   margin-bottom: 1rem;
+}
+
+.mb-5 {
+  margin-bottom: 1.25rem;
+}
+
+.ml-1 {
+  margin-left: 0.25rem;
 }
 
 .mr-4 {
@@ -615,13 +677,6 @@ video {
   margin-top: 2rem;
 }
 
-.line-clamp-3 {
-  overflow: hidden;
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  -webkit-line-clamp: 3;
-}
-
 .block {
   display: block;
 }
@@ -638,12 +693,20 @@ video {
   display: none;
 }
 
+.h-12 {
+  height: 3rem;
+}
+
 .h-8 {
   height: 2rem;
 }
 
 .h-auto {
   height: auto;
+}
+
+.w-12 {
+  width: 3rem;
 }
 
 .w-48 {
@@ -674,16 +737,28 @@ video {
   max-width: 32rem;
 }
 
-.max-w-full {
-  max-width: 100%;
-}
-
 .flex-shrink-0 {
   flex-shrink: 0;
 }
 
+.scale-0 {
+  --tw-scale-x: 0;
+  --tw-scale-y: 0;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.scale-100 {
+  --tw-scale-x: 1;
+  --tw-scale-y: 1;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.cursor-pointer {
+  cursor: pointer;
 }
 
 .grid-cols-1 {
@@ -696,6 +771,10 @@ video {
 
 .items-center {
   align-items: center;
+}
+
+.justify-end {
+  justify-content: flex-end;
 }
 
 .justify-center {
@@ -722,10 +801,8 @@ video {
   margin-bottom: calc(1rem * var(--tw-space-y-reverse));
 }
 
-.truncate {
+.overflow-hidden {
   overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
 }
 
 .rounded-2xl {
@@ -736,6 +813,14 @@ video {
   border-radius: 9999px;
 }
 
+.rounded-lg {
+  border-radius: 0.5rem;
+}
+
+.rounded-md {
+  border-radius: 0.375rem;
+}
+
 .border {
   border-width: 1px;
 }
@@ -743,6 +828,11 @@ video {
 .border-green-400 {
   --tw-border-opacity: 1;
   border-color: rgb(74 222 128 / var(--tw-border-opacity));
+}
+
+.border-white {
+  --tw-border-opacity: 1;
+  border-color: rgb(229 242 227 / var(--tw-border-opacity));
 }
 
 .bg-\[\#7DFFAF\] {
@@ -760,6 +850,19 @@ video {
   background-color: rgb(125 255 175 / var(--tw-bg-opacity));
 }
 
+.bg-customBackground {
+  --tw-bg-opacity: 1;
+  background-color: rgb(44 44 44 / var(--tw-bg-opacity));
+}
+
+.p-4 {
+  padding: 1rem;
+}
+
+.p-6 {
+  padding: 1.5rem;
+}
+
 .p-8 {
   padding: 2rem;
 }
@@ -769,9 +872,19 @@ video {
   padding-right: 2.5rem;
 }
 
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
+}
+
+.px-7 {
+  padding-left: 1.75rem;
+  padding-right: 1.75rem;
 }
 
 .py-14 {
@@ -789,23 +902,39 @@ video {
   padding-bottom: 5rem;
 }
 
-.py-4 {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
-
-.px-7 {
-  padding-left: 1.75rem;
-  padding-right: 1.75rem;
-}
-
 .py-3 {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
 }
 
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+.py-7 {
+  padding-top: 1.75rem;
+  padding-bottom: 1.75rem;
+}
+
 .pb-4 {
   padding-bottom: 1rem;
+}
+
+.pb-5 {
+  padding-bottom: 1.25rem;
+}
+
+.pl-12 {
+  padding-left: 3rem;
+}
+
+.pl-2 {
+  padding-left: 0.5rem;
+}
+
+.pt-0 {
+  padding-top: 0px;
 }
 
 .pt-10 {
@@ -844,6 +973,10 @@ video {
   line-height: 1;
 }
 
+.text-\[20px\] {
+  font-size: 20px;
+}
+
 .text-\[24px\] {
   font-size: 24px;
 }
@@ -872,6 +1005,10 @@ video {
   line-height: 1.75rem;
 }
 
+.text-\[16px\] {
+  font-size: 16px;
+}
+
 .font-bold {
   font-weight: 700;
 }
@@ -888,12 +1025,24 @@ video {
   font-weight: 600;
 }
 
+.font-light {
+  font-weight: 300;
+}
+
 .leading-10 {
   line-height: 2.5rem;
 }
 
 .leading-6 {
   line-height: 1.5rem;
+}
+
+.leading-\[1\.3\] {
+  line-height: 1.3;
+}
+
+.leading-\[26px\] {
+  line-height: 26px;
 }
 
 .leading-\[27\.8px\] {
@@ -916,8 +1065,12 @@ video {
   line-height: 1.5;
 }
 
-.leading-\[1\.3\] {
-  line-height: 1.3;
+.leading-\[1\.7\] {
+  line-height: 1.7;
+}
+
+.leading-\[34px\] {
+  line-height: 34px;
 }
 
 .tracking-\[0\.32px\] {
@@ -926,6 +1079,10 @@ video {
 
 .tracking-\[0\.48px\] {
   letter-spacing: 0.48px;
+}
+
+.tracking-\[0\.4px\] {
+  letter-spacing: 0.4px;
 }
 
 .tracking-\[0\.64px\] {
@@ -955,9 +1112,33 @@ video {
   color: rgb(125 255 175 / var(--tw-text-opacity));
 }
 
+.text-gray-700 {
+  --tw-text-opacity: 1;
+  color: rgb(55 65 81 / var(--tw-text-opacity));
+}
+
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(229 242 227 / var(--tw-text-opacity));
+}
+
+.text-gray-900 {
+  --tw-text-opacity: 1;
+  color: rgb(17 24 39 / var(--tw-text-opacity));
+}
+
+.shadow-lg {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.transition {
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
 }
 
 .transition-colors {
@@ -972,8 +1153,24 @@ video {
   transition-duration: 150ms;
 }
 
+.transition-transform {
+  transition-property: transform;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
 .duration-300 {
   transition-duration: 300ms;
+}
+
+.ease-out {
+  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
+}
+
+.hover\:scale-105:hover {
+  --tw-scale-x: 1.05;
+  --tw-scale-y: 1.05;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .hover\:text-customGreen:hover {
@@ -1014,6 +1211,14 @@ video {
     width: auto;
   }
 
+  .sm\:text-\[20px\] {
+    font-size: 20px;
+  }
+
+  .sm\:text-\[32px\] {
+    font-size: 32px;
+  }
+
   .sm\:text-base {
     font-size: 1rem;
     line-height: 1.5rem;
@@ -1024,20 +1229,21 @@ video {
     line-height: 1.75rem;
   }
 
-  .sm\:text-\[20px\] {
-    font-size: 20px;
+  .sm\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
   }
 
   .sm\:font-medium {
     font-weight: 500;
   }
 
-  .sm\:leading-7 {
-    line-height: 1.75rem;
-  }
-
   .sm\:leading-\[28px\] {
     line-height: 28px;
+  }
+
+  .sm\:tracking-\[0\.64px\] {
+    letter-spacing: 0.64px;
   }
 
   .sm\:tracking-normal {
@@ -1053,10 +1259,6 @@ video {
 
   .md\:mb-0 {
     margin-bottom: 0px;
-  }
-
-  .md\:mb-\[20px\] {
-    margin-bottom: 20px;
   }
 
   .md\:block {
@@ -1101,6 +1303,16 @@ video {
     margin-left: calc(1.5rem * calc(1 - var(--tw-space-x-reverse)));
   }
 
+  .md\:px-5 {
+    padding-left: 1.25rem;
+    padding-right: 1.25rem;
+  }
+
+  .md\:py-8 {
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+  }
+
   .md\:text-left {
     text-align: left;
   }
@@ -1132,6 +1344,11 @@ video {
     font-size: 24px;
   }
 
+  .md\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+
   .md\:text-xl {
     font-size: 1.25rem;
     line-height: 1.75rem;
@@ -1149,8 +1366,8 @@ video {
     font-weight: 600;
   }
 
-  .md\:font-bold {
-    font-weight: 700;
+  .md\:leading-\[1\.3\] {
+    line-height: 1.3;
   }
 
   .md\:leading-\[36px\] {
@@ -1177,12 +1394,12 @@ video {
     line-height: 1.5;
   }
 
-  .md\:leading-\[1\.3\] {
-    line-height: 1.3;
-  }
-
   .md\:leading-tight {
     line-height: 1.25;
+  }
+
+  .md\:tracking-\[0\.03em\] {
+    letter-spacing: 0.03em;
   }
 
   .md\:tracking-\[0\.48px\] {
@@ -1197,24 +1414,16 @@ video {
     letter-spacing: 1.28px;
   }
 
-  .md\:tracking-\[40\.8px\] {
-    letter-spacing: 40.8px;
+  .md\:tracking-\[2\.56px\] {
+    letter-spacing: 2.56px;
   }
 
   .md\:tracking-normal {
     letter-spacing: 0em;
   }
 
-  .md\:tracking-\[2\.56px\] {
-    letter-spacing: 2.56px;
-  }
-
-  .md\:tracking-\[0\.12em\] {
-    letter-spacing: 0.12em;
-  }
-
-  .md\:tracking-\[0\.03em\] {
-    letter-spacing: 0.03em;
+  .md\:tracking-wide {
+    letter-spacing: 0.025em;
   }
 
   .md\:text-customGreen {
@@ -1224,10 +1433,6 @@ video {
 }
 
 @media (min-width: 1024px) {
-  .lg\:mb-\[20px\] {
-    margin-bottom: 20px;
-  }
-
   .lg\:block {
     display: block;
   }
@@ -1256,38 +1461,17 @@ video {
     margin-left: calc(2rem * calc(1 - var(--tw-space-x-reverse)));
   }
 
-  .lg\:text-4xl {
-    font-size: 2.25rem;
-    line-height: 2.5rem;
+  .lg\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
   }
 
-  .lg\:text-xl {
-    font-size: 1.25rem;
-    line-height: 1.75rem;
-  }
-
-  .lg\:font-normal {
-    font-weight: 400;
-  }
-
-  .lg\:font-semibold {
-    font-weight: 600;
-  }
-
-  .lg\:leading-normal {
-    line-height: 1.5;
-  }
-
-  .lg\:leading-tight {
-    line-height: 1.25;
+  .lg\:tracking-wider {
+    letter-spacing: 0.05em;
   }
 }
 
 @media (min-width: 1280px) {
-  .xl\:mb-\[20px\] {
-    margin-bottom: 20px;
-  }
-
   .xl\:hidden {
     display: none;
   }
@@ -1295,14 +1479,22 @@ video {
   .xl\:w-custom {
     width: 1140px;
   }
-
-  .xl\:text-4xl {
-    font-size: 2.25rem;
-    line-height: 2.5rem;
-  }
 }
 
 @media (min-width: 1536px) {
+  .\32xl\:mx-96 {
+    margin-left: 24rem;
+    margin-right: 24rem;
+  }
+
+  .\32xl\:mb-8 {
+    margin-bottom: 2rem;
+  }
+
+  .\32xl\:ml-0 {
+    margin-left: 0px;
+  }
+
   .\32xl\:mt-20 {
     margin-top: 5rem;
   }
@@ -1322,5 +1514,9 @@ video {
   .\32xl\:py-20 {
     padding-top: 5rem;
     padding-bottom: 5rem;
+  }
+
+  .\32xl\:pr-12 {
+    padding-right: 3rem;
   }
 }
