--- a/src/assets/css/output.css
+++ b/src/assets/css/output.css
@@ -588,16 +588,8 @@ video {
   }
 }
 
-.collapse {
-  visibility: collapse;
-}
-
 .fixed {
   position: fixed;
-}
-
-.relative {
-  position: relative;
 }
 
 .sticky {
@@ -639,10 +631,6 @@ video {
 
 .ml-1 {
   margin-left: 0.25rem;
-}
-
-.mr-4 {
-  margin-right: 1rem;
 }
 
 .mt-10 {
@@ -741,15 +729,14 @@ video {
   flex-shrink: 0;
 }
 
-.scale-0 {
-  --tw-scale-x: 0;
-  --tw-scale-y: 0;
+.translate-x-0 {
+  --tw-translate-x: 0px;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.scale-100 {
-  --tw-scale-x: 1;
-  --tw-scale-y: 1;
+.scale-0 {
+  --tw-scale-x: 0;
+  --tw-scale-y: 0;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -763,10 +750,6 @@ video {
 
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
-}
-
-.flex-wrap {
-  flex-wrap: wrap;
 }
 
 .items-center {
@@ -813,10 +796,6 @@ video {
   border-radius: 9999px;
 }
 
-.rounded-lg {
-  border-radius: 0.5rem;
-}
-
 .rounded-md {
   border-radius: 0.375rem;
 }
@@ -835,9 +814,9 @@ video {
   border-color: rgb(229 242 227 / var(--tw-border-opacity));
 }
 
-.bg-\[\#7DFFAF\] {
+.bg-\[\#18910D\] {
   --tw-bg-opacity: 1;
-  background-color: rgb(125 255 175 / var(--tw-bg-opacity));
+  background-color: rgb(24 145 13 / var(--tw-bg-opacity));
 }
 
 .bg-black {
@@ -855,21 +834,31 @@ video {
   background-color: rgb(44 44 44 / var(--tw-bg-opacity));
 }
 
-.p-4 {
-  padding: 1rem;
+.bg-\[\#1891OD\] {
+  background-color: #1891OD;
+}
+
+.bg-custom-active {
+  --tw-bg-opacity: 1;
+  background-color: rgb(24 145 13 / var(--tw-bg-opacity));
+}
+
+.p-1 {
+  padding: 0.25rem;
 }
 
 .p-6 {
   padding: 1.5rem;
 }
 
-.p-8 {
-  padding: 2rem;
-}
-
 .px-10 {
   padding-left: 2.5rem;
   padding-right: 2.5rem;
+}
+
+.px-14 {
+  padding-left: 3.5rem;
+  padding-right: 3.5rem;
 }
 
 .px-2 {
@@ -968,21 +957,8 @@ video {
   line-height: 2.5rem;
 }
 
-.text-6xl {
-  font-size: 3.75rem;
-  line-height: 1;
-}
-
 .text-\[20px\] {
   font-size: 20px;
-}
-
-.text-\[24px\] {
-  font-size: 24px;
-}
-
-.text-\[32px\] {
-  font-size: 32px;
 }
 
 .text-base {
@@ -1005,12 +981,12 @@ video {
   line-height: 1.75rem;
 }
 
-.text-\[16px\] {
-  font-size: 16px;
-}
-
 .font-bold {
   font-weight: 700;
+}
+
+.font-light {
+  font-weight: 300;
 }
 
 .font-medium {
@@ -1023,10 +999,6 @@ video {
 
 .font-semibold {
   font-weight: 600;
-}
-
-.font-light {
-  font-weight: 300;
 }
 
 .leading-10 {
@@ -1053,32 +1025,16 @@ video {
   line-height: 30px;
 }
 
-.leading-\[36px\] {
-  line-height: 36px;
-}
-
-.leading-\[80px\] {
-  line-height: 80px;
+.leading-\[34px\] {
+  line-height: 34px;
 }
 
 .leading-normal {
   line-height: 1.5;
 }
 
-.leading-\[1\.7\] {
-  line-height: 1.7;
-}
-
-.leading-\[34px\] {
-  line-height: 34px;
-}
-
 .tracking-\[0\.32px\] {
   letter-spacing: 0.32px;
-}
-
-.tracking-\[0\.48px\] {
-  letter-spacing: 0.48px;
 }
 
 .tracking-\[0\.4px\] {
@@ -1112,19 +1068,19 @@ video {
   color: rgb(125 255 175 / var(--tw-text-opacity));
 }
 
-.text-gray-700 {
-  --tw-text-opacity: 1;
-  color: rgb(55 65 81 / var(--tw-text-opacity));
-}
-
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(229 242 227 / var(--tw-text-opacity));
 }
 
-.text-gray-900 {
+.text-\[\#E5F2E3\] {
   --tw-text-opacity: 1;
-  color: rgb(17 24 39 / var(--tw-text-opacity));
+  color: rgb(229 242 227 / var(--tw-text-opacity));
+}
+
+.text-\[\#E3E3E3\] {
+  --tw-text-opacity: 1;
+  color: rgb(227 227 227 / var(--tw-text-opacity));
 }
 
 .shadow-lg {
@@ -1159,6 +1115,10 @@ video {
   transition-duration: 150ms;
 }
 
+.duration-200 {
+  transition-duration: 200ms;
+}
+
 .duration-300 {
   transition-duration: 300ms;
 }
@@ -1189,26 +1149,9 @@ video {
   outline-offset: 2px;
 }
 
-.active\:bg-custom-active:active {
-  --tw-bg-opacity: 1;
-  background-color: rgb(24 145 13 / var(--tw-bg-opacity));
-}
-
-.disabled\:cursor-not-allowed:disabled {
-  cursor: not-allowed;
-}
-
-.disabled\:bg-custom-disabled:disabled {
-  background-color: rgba(24, 145, 13, 0.30);
-}
-
 @media (min-width: 640px) {
   .sm\:block {
     display: block;
-  }
-
-  .sm\:w-auto {
-    width: auto;
   }
 
   .sm\:text-\[20px\] {
@@ -1229,11 +1172,6 @@ video {
     line-height: 1.75rem;
   }
 
-  .sm\:text-2xl {
-    font-size: 1.5rem;
-    line-height: 2rem;
-  }
-
   .sm\:font-medium {
     font-weight: 500;
   }
@@ -1252,15 +1190,6 @@ video {
 }
 
 @media (min-width: 768px) {
-  .md\:mx-0 {
-    margin-left: 0px;
-    margin-right: 0px;
-  }
-
-  .md\:mb-0 {
-    margin-bottom: 0px;
-  }
-
   .md\:block {
     display: block;
   }
@@ -1275,18 +1204,6 @@ video {
 
   .md\:hidden {
     display: none;
-  }
-
-  .md\:w-1\/4 {
-    width: 25%;
-  }
-
-  .md\:w-2\/4 {
-    width: 50%;
-  }
-
-  .md\:w-custom {
-    width: 1140px;
   }
 
   .md\:grid-cols-3 {
@@ -1313,16 +1230,8 @@ video {
     padding-bottom: 2rem;
   }
 
-  .md\:text-left {
-    text-align: left;
-  }
-
   .md\:text-center {
     text-align: center;
-  }
-
-  .md\:text-right {
-    text-align: right;
   }
 
   .md\:text-2xl {
@@ -1445,10 +1354,6 @@ video {
     width: 740px;
   }
 
-  .lg\:w-custom {
-    width: 1140px;
-  }
-
   .lg\:space-x-6 > :not([hidden]) ~ :not([hidden]) {
     --tw-space-x-reverse: 0;
     margin-right: calc(1.5rem * var(--tw-space-x-reverse));
@@ -1466,6 +1371,15 @@ video {
     line-height: 2rem;
   }
 
+  .lg\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+
+  .lg\:font-medium {
+    font-weight: 500;
+  }
+
   .lg\:tracking-wider {
     letter-spacing: 0.05em;
   }
@@ -1474,10 +1388,6 @@ video {
 @media (min-width: 1280px) {
   .xl\:hidden {
     display: none;
-  }
-
-  .xl\:w-custom {
-    width: 1140px;
   }
 }
 
@@ -1501,19 +1411,6 @@ video {
 
   .\32xl\:hidden {
     display: none;
-  }
-
-  .\32xl\:w-\[740px\] {
-    width: 740px;
-  }
-
-  .\32xl\:w-custom {
-    width: 1140px;
-  }
-
-  .\32xl\:py-20 {
-    padding-top: 5rem;
-    padding-bottom: 5rem;
   }
 
   .\32xl\:pr-12 {
