--- a/src/assets/css/output.css
+++ b/src/assets/css/output.css
@@ -600,12 +600,20 @@ video {
   bottom: 1.25rem;
 }
 
+.left-0 {
+  left: 0px;
+}
+
 .right-5 {
   right: 1.25rem;
 }
 
 .top-0 {
   top: 0px;
+}
+
+.top-\[60\] {
+  top: 60;
 }
 
 .z-50 {
@@ -653,6 +661,10 @@ video {
   margin-top: 1rem;
 }
 
+.mt-5 {
+  margin-top: 1.25rem;
+}
+
 .mt-6 {
   margin-top: 1.5rem;
 }
@@ -687,6 +699,10 @@ video {
 
 .h-8 {
   height: 2rem;
+}
+
+.h-80 {
+  height: 20rem;
 }
 
 .h-auto {
@@ -729,8 +745,8 @@ video {
   flex-shrink: 0;
 }
 
-.translate-x-0 {
-  --tw-translate-x: 0px;
+.-translate-x-full {
+  --tw-translate-x: -100%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -788,6 +804,10 @@ video {
   overflow: hidden;
 }
 
+.rounded {
+  border-radius: 0.25rem;
+}
+
 .rounded-2xl {
   border-radius: 120px;
 }
@@ -814,14 +834,14 @@ video {
   border-color: rgb(229 242 227 / var(--tw-border-opacity));
 }
 
-.bg-\[\#18910D\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(24 145 13 / var(--tw-bg-opacity));
-}
-
 .bg-black {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
+.bg-custom-active {
+  --tw-bg-opacity: 1;
+  background-color: rgb(24 145 13 / var(--tw-bg-opacity));
 }
 
 .bg-custom-green {
@@ -832,15 +852,6 @@ video {
 .bg-customBackground {
   --tw-bg-opacity: 1;
   background-color: rgb(44 44 44 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#1891OD\] {
-  background-color: #1891OD;
-}
-
-.bg-custom-active {
-  --tw-bg-opacity: 1;
-  background-color: rgb(24 145 13 / var(--tw-bg-opacity));
 }
 
 .p-1 {
@@ -1053,9 +1064,9 @@ video {
   letter-spacing: 0.025em;
 }
 
-.text-\[\#060F05\] {
+.text-\[\#E3E3E3\] {
   --tw-text-opacity: 1;
-  color: rgb(6 15 5 / var(--tw-text-opacity));
+  color: rgb(227 227 227 / var(--tw-text-opacity));
 }
 
 .text-black {
@@ -1071,16 +1082,6 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(229 242 227 / var(--tw-text-opacity));
-}
-
-.text-\[\#E5F2E3\] {
-  --tw-text-opacity: 1;
-  color: rgb(229 242 227 / var(--tw-text-opacity));
-}
-
-.text-\[\#E3E3E3\] {
-  --tw-text-opacity: 1;
-  color: rgb(227 227 227 / var(--tw-text-opacity));
 }
 
 .shadow-lg {
@@ -1123,8 +1124,16 @@ video {
   transition-duration: 300ms;
 }
 
+.duration-500 {
+  transition-duration: 500ms;
+}
+
 .ease-out {
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
+}
+
+.ease-in {
+  transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
 }
 
 .hover\:scale-105:hover {
