--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -27,7 +27,6 @@
     width: 48px !important;
     height: 8px !important;
     border-radius: 4px !important;
-    background-color: #7dffaf !important;
     opacity: 0.5 !important;
     transition: opacity 0.3s ease !important;
     margin-top: 25px;
@@ -39,6 +38,10 @@
 
 .slick-dots li.slick-active button {
     opacity: 1 !important;
+}
+.light-mode .slick-dots li button {
+    background-color: #022648 !important;
+    /* Adjust other styles as needed for light mode */
 }
 .slick-slide{
     .silck-dark{
