--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -29,6 +29,7 @@
     border-radius: 4px !important;
     opacity: 0.5 !important;
     transition: opacity 0.3s ease !important;
+    background-color: #022648 !important;
     margin-top: 25px;
     &:before {
         display: none !important;
@@ -38,14 +39,9 @@
 .slick-dots li.slick-active button {
     opacity: 1 !important;
 }
-.light-mode .slick-dots li button {
+/* .light-mode .slick-dots li button {
     background-color: #022648 !important;
 }
 .dark-mode .slick-dots li button {
     background-color: #7dffaf !important;
-}
-.slick-slide{
-    .silck-dark{
-        display: none;
-    }
-}
+} */
