--- a/src/assets/css/output.css
+++ b/src/assets/css/output.css
@@ -616,6 +616,10 @@ video {
   left: 0px;
 }
 
+.right-4 {
+  right: 1rem;
+}
+
 .right-5 {
   right: 1.25rem;
 }
@@ -628,28 +632,16 @@ video {
   top: 0px;
 }
 
+.top-4 {
+  top: 1rem;
+}
+
 .top-\[-5px\] {
   top: -5px;
 }
 
 .top-\[10px\] {
   top: 10px;
-}
-
-.top-\[60\] {
-  top: 60;
-}
-
-.right-2 {
-  right: 0.5rem;
-}
-
-.right-4 {
-  right: 1rem;
-}
-
-.top-4 {
-  top: 1rem;
 }
 
 .z-50 {
@@ -769,20 +761,12 @@ video {
   height: 2rem;
 }
 
-.h-80 {
-  height: 20rem;
+.h-\[300px\] {
+  height: 300px;
 }
 
 .h-auto {
   height: auto;
-}
-
-.h-screen {
-  height: 100vh;
-}
-
-.h-\[300px\] {
-  height: 300px;
 }
 
 .w-12 {
@@ -1007,19 +991,9 @@ video {
   padding-right: 1.75rem;
 }
 
-.px-8 {
-  padding-left: 2rem;
-  padding-right: 2rem;
-}
-
 .py-14 {
   padding-top: 3.5rem;
   padding-bottom: 3.5rem;
-}
-
-.py-16 {
-  padding-top: 4rem;
-  padding-bottom: 4rem;
 }
 
 .py-2 {
@@ -1311,12 +1285,12 @@ video {
   transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
 }
 
-.ease-out {
-  transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
-}
-
 .ease-in-out {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.font-display-swap {
+  font-display: swap;
 }
 
 .bg-custom-green {
@@ -1357,13 +1331,6 @@ video {
 .slick-dots li.slick-active button {
   opacity: 1 !important;
 }
-
-/* .light-mode .slick-dots li button {
-    background-color: #022648 !important;
-}
-.dark-mode .slick-dots li button {
-    background-color: #7dffaf !important;
-} */
 
 .iti__country-list{
   max-width: 315px !important;
@@ -1498,20 +1465,8 @@ video {
 }
 
 @media (min-width: 640px) {
-  .sm\:absolute {
-    position: absolute;
-  }
-
-  .sm\:right-2 {
-    right: 0.5rem;
-  }
-
   .sm\:block {
     display: block;
-  }
-
-  .sm\:max-w-full {
-    max-width: 100%;
   }
 
   .sm\:grid-cols-2 {
@@ -1719,18 +1674,6 @@ video {
 }
 
 @media (min-width: 1024px) {
-  .lg\:absolute {
-    position: absolute;
-  }
-
-  .lg\:right-4 {
-    right: 1rem;
-  }
-
-  .lg\:top-4 {
-    top: 1rem;
-  }
-
   .lg\:hidden {
     display: none;
   }
