--- a/src/assets/css/output.css
+++ b/src/assets/css/output.css
@@ -588,6 +588,10 @@ video {
   }
 }
 
+.pointer-events-none {
+  pointer-events: none;
+}
+
 .fixed {
   position: fixed;
 }
@@ -642,6 +646,14 @@ video {
 
 .top-\[10px\] {
   top: 10px;
+}
+
+.right-3 {
+  right: 0.75rem;
+}
+
+.top-12 {
+  top: 3rem;
 }
 
 .z-50 {
@@ -773,6 +785,10 @@ video {
   height: auto;
 }
 
+.h-4 {
+  height: 1rem;
+}
+
 .w-12 {
   width: 3rem;
 }
@@ -801,6 +817,10 @@ video {
   width: 100%;
 }
 
+.w-4 {
+  width: 1rem;
+}
+
 .min-w-\[143px\] {
   min-width: 143px;
 }
@@ -823,6 +843,10 @@ video {
 
 .max-w-md {
   max-width: 28rem;
+}
+
+.max-w-sm {
+  max-width: 24rem;
 }
 
 .flex-1 {
@@ -922,6 +946,10 @@ video {
 
 .rounded-xl {
   border-radius: 32px;
+}
+
+.rounded-lg {
+  border-radius: 0.5rem;
 }
 
 .border {
@@ -1130,6 +1158,11 @@ video {
   line-height: 1.75rem;
 }
 
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+
 .font-bold {
   font-weight: 700;
 }
@@ -1188,6 +1221,10 @@ video {
 
 .leading-normal {
   line-height: 1.5;
+}
+
+.leading-4 {
+  line-height: 1rem;
 }
 
 .tracking-\[0\.32px\] {
@@ -1468,6 +1505,16 @@ video {
   color: rgb(229 242 227 / var(--tw-text-opacity));
 }
 
+.dark\:placeholder-white:is(.dark *)::-moz-placeholder {
+  --tw-placeholder-opacity: 1;
+  color: rgb(229 242 227 / var(--tw-placeholder-opacity));
+}
+
+.dark\:placeholder-white:is(.dark *)::placeholder {
+  --tw-placeholder-opacity: 1;
+  color: rgb(229 242 227 / var(--tw-placeholder-opacity));
+}
+
 .dark\:placeholder\:text-white:is(.dark *)::-moz-placeholder {
   --tw-text-opacity: 1;
   color: rgb(229 242 227 / var(--tw-text-opacity));
@@ -1713,6 +1760,10 @@ video {
 
   .lg\:max-w-\[44\.688rem\] {
     max-width: 44.688rem;
+  }
+
+  .lg\:max-w-2xl {
+    max-width: 42rem;
   }
 
   .lg\:space-x-6 > :not([hidden]) ~ :not([hidden]) {
