--- a/src/assets/css/output.css
+++ b/src/assets/css/output.css
@@ -620,6 +620,10 @@ video {
   left: 0px;
 }
 
+.right-3 {
+  right: 0.75rem;
+}
+
 .right-4 {
   right: 1rem;
 }
@@ -636,6 +640,10 @@ video {
   top: 0px;
 }
 
+.top-1\/2 {
+  top: 50%;
+}
+
 .top-4 {
   top: 1rem;
 }
@@ -646,14 +654,6 @@ video {
 
 .top-\[10px\] {
   top: 10px;
-}
-
-.right-3 {
-  right: 0.75rem;
-}
-
-.top-12 {
-  top: 3rem;
 }
 
 .z-50 {
@@ -737,10 +737,6 @@ video {
   margin-top: 1.75rem;
 }
 
-.mb-1 {
-  margin-bottom: 0.25rem;
-}
-
 .block {
   display: block;
 }
@@ -759,6 +755,10 @@ video {
 
 .hidden {
   display: none;
+}
+
+.h-0 {
+  height: 0px;
 }
 
 .h-12 {
@@ -785,8 +785,8 @@ video {
   height: auto;
 }
 
-.h-4 {
-  height: 1rem;
+.w-0 {
+  width: 0px;
 }
 
 .w-12 {
@@ -817,10 +817,6 @@ video {
   width: 100%;
 }
 
-.w-4 {
-  width: 1rem;
-}
-
 .min-w-\[143px\] {
   min-width: 143px;
 }
@@ -845,10 +841,6 @@ video {
   max-width: 28rem;
 }
 
-.max-w-sm {
-  max-width: 24rem;
-}
-
 .flex-1 {
   flex: 1 1 0%;
 }
@@ -859,6 +851,11 @@ video {
 
 .-translate-x-full {
   --tw-translate-x: -100%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.-translate-y-1\/2 {
+  --tw-translate-y: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -878,6 +875,12 @@ video {
 
 .scroll-mt-20 {
   scroll-margin-top: 5rem;
+}
+
+.appearance-none {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
 }
 
 .grid-cols-1 {
@@ -948,12 +951,20 @@ video {
   border-radius: 32px;
 }
 
-.rounded-lg {
-  border-radius: 0.5rem;
-}
-
 .border {
   border-width: 1px;
+}
+
+.border-l-4 {
+  border-left-width: 4px;
+}
+
+.border-r-4 {
+  border-right-width: 4px;
+}
+
+.border-t-4 {
+  border-top-width: 4px;
 }
 
 .border-customblack {
@@ -969,6 +980,19 @@ video {
 .border-gray-300 {
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
+}
+
+.border-l-transparent {
+  border-left-color: transparent;
+}
+
+.border-r-transparent {
+  border-right-color: transparent;
+}
+
+.border-t-gray-600 {
+  --tw-border-opacity: 1;
+  border-top-color: rgb(75 85 99 / var(--tw-border-opacity));
 }
 
 .bg-customblue {
@@ -1067,6 +1091,10 @@ video {
   padding-bottom: 2rem;
 }
 
+.pb-1 {
+  padding-bottom: 0.25rem;
+}
+
 .pb-4 {
   padding-bottom: 1rem;
 }
@@ -1083,16 +1111,16 @@ video {
   padding-left: 0.5rem;
 }
 
+.pr-10 {
+  padding-right: 2.5rem;
+}
+
 .pt-0 {
   padding-top: 0px;
 }
 
 .pt-10 {
   padding-top: 2.5rem;
-}
-
-.pb-1 {
-  padding-bottom: 0.25rem;
 }
 
 .text-left {
@@ -1187,6 +1215,10 @@ video {
   line-height: 2.5rem;
 }
 
+.leading-4 {
+  line-height: 1rem;
+}
+
 .leading-5 {
   line-height: 1.25rem;
 }
@@ -1221,10 +1253,6 @@ video {
 
 .leading-normal {
   line-height: 1.5;
-}
-
-.leading-4 {
-  line-height: 1rem;
 }
 
 .tracking-\[0\.32px\] {
@@ -1335,6 +1363,10 @@ video {
   transition-duration: 100ms;
 }
 
+.duration-200 {
+  transition-duration: 200ms;
+}
+
 .duration-300 {
   transition-duration: 300ms;
 }
@@ -1407,10 +1439,45 @@ video {
   border-bottom: 1px solid #ffffff;
 }
 
+/* Add this to your stylesheet */
+
+/* Custom CSS */
+
+.custom-select {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  /* Removes default dropdown arrow */
+  padding-right: 2.5rem;
+  /* Ensure there's space for the arrow icon */
+}
+
+.custom-arrow {
+  position: absolute;
+  top: 70%;
+  right: 0.75rem;
+  /* Adjust positioning as needed */
+  transform: translateY(-50%) rotate(0deg);
+  transition: transform 0.3s ease-in-out;
+  /* Smooth transition for rotation */
+}
+
+/* Rotate arrow when dropdown is open */
+
+.custom-select:focus + .custom-arrow,
+.custom-select:active + .custom-arrow,
+.custom-select:focus-within + .custom-arrow {
+  transform: translateY(-50%) rotate(180deg);
+}
+
 .hover\:scale-105:hover {
   --tw-scale-x: 1.05;
   --tw-scale-y: 1.05;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.hover\:bg-opacity-40:hover {
+  --tw-bg-opacity: 0.4;
 }
 
 .hover\:bg-opacity-\[40\%\]:hover {
@@ -1460,6 +1527,11 @@ video {
   border-color: rgb(229 242 227 / var(--tw-border-opacity));
 }
 
+.dark\:border-t-white:is(.dark *) {
+  --tw-border-opacity: 1;
+  border-top-color: rgb(229 242 227 / var(--tw-border-opacity));
+}
+
 .dark\:bg-\[\#212121\]:is(.dark *) {
   --tw-bg-opacity: 1;
   background-color: rgb(33 33 33 / var(--tw-bg-opacity));
@@ -1503,16 +1575,6 @@ video {
 .dark\:text-white:is(.dark *) {
   --tw-text-opacity: 1;
   color: rgb(229 242 227 / var(--tw-text-opacity));
-}
-
-.dark\:placeholder-white:is(.dark *)::-moz-placeholder {
-  --tw-placeholder-opacity: 1;
-  color: rgb(229 242 227 / var(--tw-placeholder-opacity));
-}
-
-.dark\:placeholder-white:is(.dark *)::placeholder {
-  --tw-placeholder-opacity: 1;
-  color: rgb(229 242 227 / var(--tw-placeholder-opacity));
 }
 
 .dark\:placeholder\:text-white:is(.dark *)::-moz-placeholder {
@@ -1762,10 +1824,6 @@ video {
     max-width: 44.688rem;
   }
 
-  .lg\:max-w-2xl {
-    max-width: 42rem;
-  }
-
   .lg\:space-x-6 > :not([hidden]) ~ :not([hidden]) {
     --tw-space-x-reverse: 0;
     margin-right: calc(1.5rem * var(--tw-space-x-reverse));
@@ -1829,3 +1887,4 @@ video {
     padding-right: 3rem;
   }
 }
+
