--- a/src/assets/css/output.css
+++ b/src/assets/css/output.css
@@ -588,10 +588,6 @@ video {
   }
 }
 
-.pointer-events-none {
-  pointer-events: none;
-}
-
 .fixed {
   position: fixed;
 }
@@ -620,10 +616,6 @@ video {
   left: 0px;
 }
 
-.right-3 {
-  right: 0.75rem;
-}
-
 .right-4 {
   right: 1rem;
 }
@@ -640,16 +632,8 @@ video {
   top: 0px;
 }
 
-.top-1\/2 {
-  top: 50%;
-}
-
 .top-4 {
   top: 1rem;
-}
-
-.top-\[-5px\] {
-  top: -5px;
 }
 
 .top-\[10px\] {
@@ -663,10 +647,6 @@ video {
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
-}
-
-.mb-10 {
-  margin-bottom: 2.5rem;
 }
 
 .mb-3 {
@@ -683,22 +663,6 @@ video {
 
 .ml-1 {
   margin-left: 0.25rem;
-}
-
-.ml-auto {
-  margin-left: auto;
-}
-
-.mr-2 {
-  margin-right: 0.5rem;
-}
-
-.mt-0 {
-  margin-top: 0px;
-}
-
-.mt-1 {
-  margin-top: 0.25rem;
 }
 
 .mt-10 {
@@ -757,10 +721,6 @@ video {
   display: none;
 }
 
-.h-0 {
-  height: 0px;
-}
-
 .h-12 {
   height: 3rem;
 }
@@ -783,10 +743,6 @@ video {
 
 .h-auto {
   height: auto;
-}
-
-.w-0 {
-  width: 0px;
 }
 
 .w-12 {
@@ -817,20 +773,12 @@ video {
   width: 100%;
 }
 
-.min-w-\[143px\] {
-  min-width: 143px;
-}
-
 .max-w-2xl {
   max-width: 42rem;
 }
 
 .max-w-3xl {
   max-width: 48rem;
-}
-
-.max-w-\[405px\] {
-  max-width: 405px;
 }
 
 .max-w-lg {
@@ -841,21 +789,12 @@ video {
   max-width: 28rem;
 }
 
-.flex-1 {
-  flex: 1 1 0%;
-}
-
 .flex-shrink-0 {
   flex-shrink: 0;
 }
 
 .-translate-x-full {
   --tw-translate-x: -100%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.-translate-y-1\/2 {
-  --tw-translate-y: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -877,12 +816,6 @@ video {
   scroll-margin-top: 5rem;
 }
 
-.appearance-none {
-  -webkit-appearance: none;
-     -moz-appearance: none;
-          appearance: none;
-}
-
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
@@ -901,10 +834,6 @@ video {
 
 .justify-between {
   justify-content: space-between;
-}
-
-.gap-4 {
-  gap: 1rem;
 }
 
 .gap-8 {
@@ -947,24 +876,8 @@ video {
   border-radius: 0.375rem;
 }
 
-.rounded-xl {
-  border-radius: 32px;
-}
-
 .border {
   border-width: 1px;
-}
-
-.border-l-4 {
-  border-left-width: 4px;
-}
-
-.border-r-4 {
-  border-right-width: 4px;
-}
-
-.border-t-4 {
-  border-top-width: 4px;
 }
 
 .border-customblack {
@@ -977,27 +890,14 @@ video {
   border-color: rgb(191 42 246 / var(--tw-border-opacity));
 }
 
-.border-gray-300 {
-  --tw-border-opacity: 1;
-  border-color: rgb(209 213 219 / var(--tw-border-opacity));
-}
-
-.border-l-transparent {
-  border-left-color: transparent;
-}
-
-.border-r-transparent {
-  border-right-color: transparent;
-}
-
-.border-t-gray-600 {
-  --tw-border-opacity: 1;
-  border-top-color: rgb(75 85 99 / var(--tw-border-opacity));
-}
-
 .bg-customblue {
   --tw-bg-opacity: 1;
   background-color: rgb(2 38 72 / var(--tw-bg-opacity));
+}
+
+.bg-customlightgreen {
+  --tw-bg-opacity: 1;
+  background-color: rgb(42 113 104 / var(--tw-bg-opacity));
 }
 
 .bg-gray-900 {
@@ -1016,10 +916,6 @@ video {
 
 .p-1 {
   padding: 0.25rem;
-}
-
-.p-2 {
-  padding: 0.5rem;
 }
 
 .p-6 {
@@ -1111,10 +1007,6 @@ video {
   padding-left: 0.5rem;
 }
 
-.pr-10 {
-  padding-right: 2.5rem;
-}
-
 .pt-0 {
   padding-top: 0px;
 }
@@ -1150,16 +1042,8 @@ video {
   line-height: 2.5rem;
 }
 
-.text-\[10px\] {
-  font-size: 10px;
-}
-
 .text-\[12px\] {
   font-size: 12px;
-}
-
-.text-\[16px\] {
-  font-size: 16px;
 }
 
 .text-\[20px\] {
@@ -1186,11 +1070,6 @@ video {
   line-height: 1.75rem;
 }
 
-.text-xs {
-  font-size: 0.75rem;
-  line-height: 1rem;
-}
-
 .font-bold {
   font-weight: 700;
 }
@@ -1215,10 +1094,6 @@ video {
   line-height: 2.5rem;
 }
 
-.leading-4 {
-  line-height: 1rem;
-}
-
 .leading-5 {
   line-height: 1.25rem;
 }
@@ -1229,10 +1104,6 @@ video {
 
 .leading-\[1\.3\] {
   line-height: 1.3;
-}
-
-.leading-\[15px\] {
-  line-height: 15px;
 }
 
 .leading-\[26px\] {
@@ -1295,35 +1166,9 @@ video {
   color: rgb(229 242 227 / var(--tw-text-opacity));
 }
 
-.underline {
-  text-decoration-line: underline;
-}
-
-.placeholder-customblack::-moz-placeholder {
-  --tw-placeholder-opacity: 1;
-  color: rgb(6 15 5 / var(--tw-placeholder-opacity));
-}
-
-.placeholder-customblack::placeholder {
-  --tw-placeholder-opacity: 1;
-  color: rgb(6 15 5 / var(--tw-placeholder-opacity));
-}
-
 .shadow-lg {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-md {
-  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-sm {
-  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
-  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -1361,10 +1206,6 @@ video {
 
 .duration-100 {
   transition-duration: 100ms;
-}
-
-.duration-200 {
-  transition-duration: 200ms;
 }
 
 .duration-300 {
@@ -1476,14 +1317,6 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.hover\:bg-opacity-40:hover {
-  --tw-bg-opacity: 0.4;
-}
-
-.hover\:bg-opacity-\[40\%\]:hover {
-  --tw-bg-opacity: 40%;
-}
-
 .hover\:text-customGreen:hover {
   --tw-text-opacity: 1;
   color: rgb(125 255 175 / var(--tw-text-opacity));
@@ -1527,16 +1360,6 @@ video {
   border-color: rgb(229 242 227 / var(--tw-border-opacity));
 }
 
-.dark\:border-t-white:is(.dark *) {
-  --tw-border-opacity: 1;
-  border-top-color: rgb(229 242 227 / var(--tw-border-opacity));
-}
-
-.dark\:bg-\[\#212121\]:is(.dark *) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(33 33 33 / var(--tw-bg-opacity));
-}
-
 .dark\:bg-\[\#f1f1f1\]:is(.dark *) {
   --tw-bg-opacity: 1;
   background-color: rgb(241 241 241 / var(--tw-bg-opacity));
@@ -1567,22 +1390,7 @@ video {
   color: rgb(125 255 175 / var(--tw-text-opacity));
 }
 
-.dark\:text-customblack:is(.dark *) {
-  --tw-text-opacity: 1;
-  color: rgb(6 15 5 / var(--tw-text-opacity));
-}
-
 .dark\:text-white:is(.dark *) {
-  --tw-text-opacity: 1;
-  color: rgb(229 242 227 / var(--tw-text-opacity));
-}
-
-.dark\:placeholder\:text-white:is(.dark *)::-moz-placeholder {
-  --tw-text-opacity: 1;
-  color: rgb(229 242 227 / var(--tw-text-opacity));
-}
-
-.dark\:placeholder\:text-white:is(.dark *)::placeholder {
   --tw-text-opacity: 1;
   color: rgb(229 242 227 / var(--tw-text-opacity));
 }
@@ -1601,10 +1409,6 @@ video {
 @media (min-width: 640px) {
   .sm\:block {
     display: block;
-  }
-
-  .sm\:grid-cols-2 {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
   .sm\:px-8 {
